Allow to specify which attributes are exported